# AI_FrontDesk_Receptionist

./: LICENSE  Readme.md
.jules/: sentinel.md
my-agent/: .env.example  README.md  pyproject.toml
my-agent/.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md  commit.bat  metrics.json
my-agent/.gsd/activity/: 001-research-slice-M001-S01.jsonl  002-plan-slice-M001-S01.jsonl  003-execute-task-M001-S01-T01.jsonl  004-execute-task-M001-S01-T01.jsonl  005-execute-task-M001-S01-T01.jsonl  006-execute-task-M001-S01-T01.jsonl
my-agent/.jules/: bolt.md
my-agent/src/: agent.py
my-agent/src/agent_starter_python.egg-info/: PKG-INFO
my-agent/src/classification/: __init__.py  final_classifier.py  live_classifier.py  rules.py
my-agent/src/config/: __init__.py  hvac_demo_config.py  load_config.py
my-agent/src/conversation/: __init__.py  conversation_controller.py  intake_policy.py  intake_task.py  prompts.py  slot_tracker.py
my-agent/src/hvac_types/: __init__.py  business_config.py  call_intake_record.py  classification.py  slot_state.py
my-agent/src/orchestration/: __init__.py  after_hours_gate.py  call_lifecycle.py  summary_builder.py  transcript_assembler.py
my-agent/src/services/: __init__.py
my-agent/src/utils/: __init__.py  errors.py  logging.py  phone.py  time.py
my-agent/tests/: conftest.py  test_after_hours_gate.py  test_agent.py  test_call_lifecycle.py  test_conversation_controller.py  test_ghl_service.py  test_intake_task.py  test_phone_utils.py  test_prompts.py  test_s06_readiness.py  test_slot_filling.py  test_sms_service.py  test_types.py
(+86 files in other folders)
