[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvac-after-hours-agent"
version = "0.1.0"
description = "After-hours HVAC voice intake agent built on LiveKit Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "livekit>=1.1.2,<2",
  "livekit-agents>=1.4.4,<2",
  "livekit-plugins-noise-cancellation>=0.2.5,<1",
  "livekit-plugins-silero>=1.4.4,<2",
  "livekit-plugins-turn-detector>=1.4.4,<2",
  "httpx>=0.28.1,<1",
  "python-dotenv>=1.0.0,<2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0,<10",
  "pytest-asyncio>=1.3.0,<2",
  "ruff>=0.15.5,<0.16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
